--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-PORT = 3000
-HOST = 'localhost'
+PORT = 5000
+hostname = "localhost"
+MONGO_URI = 'mongodb+srv://chrisdike1234:chrisdike1234@christiandikecluster.i2nes5m.mongodb.net/?retryWrites=true&w=majority'
