--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "backend_boilerplate",
+  "name": "todoAPI",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node ./src/index.js",
-    "dev": "nodemon .src/index.js"
+    "start": "node ./backend/server.js",
+    "dev": "nodemon .backend/server.js"
   },
   "keywords": [],
   "author": "",
